--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@ name = "schemamodels"
 version = "0.1.0-a1"
 description = "Dynamically create useful data classes from JSON schemas"
 authors = ["'Jurnell Cockhren' <jurnell@civichacker.com>"]
-license = "LGPL-3.0"
+license = "LGPL-3.0-or-later"
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
