--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ workflows:
   tox-tests:
     jobs:
       - test:
-          name: python
+          name: python-<< parameters.version >>
           matrix:
             parameters:
               version: ["3.8", "3.9", "3.10"]
