--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   python: circleci/python@1.4.0
 jobs:
-  test:
+  python:
     parameters:
       version:
         type: string
@@ -18,7 +18,7 @@ jobs:
   lint:
     executor: python/default
     docker:
-      - image: circleci/python
+      - image: cimg/python:3.8
     steps:
       - checkout
       - python/install-packages:
@@ -27,18 +27,18 @@ jobs:
   unused code check:
     executor: python/default
     docker:
-      - image: circleci/python
+      - image: cimg/python:3.8
     steps:
       - checkout
       - python/install-packages:
           pkg-manager: poetry
-      - run: poetry run vulture schemamodels
+      - run: poetry run vulture .
 
 
 workflows:
   tox-tests:
     jobs:
-      - test:
+      - python:
           matrix:
             parameters:
               version: ["3.8", "3.9", "3.10"]
