--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ license = "LGPL-3.0-or-later"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
 ipython = "^8.7.0"
 jsonschema = "^4.17.3"
 vulture = "^2.6"
-flake8 = "^6.0.0"
+flake8 = { version = "^6.0.0", python = ">=3.8.1" }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
