--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ipython = "^8.7.0"
 jsonschema = "^4.17.3"
 vulture = "^2.6"
 flake8 = { version = "^6.0.0", python = ">=3.8.1" }
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
