--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,15 @@ jobs:
       - run:
           command: poetry run pytest
           name: Python << parameters.version >> tests
+  code coverage:
+    executor: python/default
+    docker:
+      - image: cimg/python:3.8
+    steps:
+      - checkout
+      - python/install-packages:
+          pkg-manager: poetry
+      - run: poetry run pytest --cov --cov-branch --cov-fail-under=90
   lint:
     executor: python/default
     docker:
@@ -43,4 +52,5 @@ workflows:
             parameters:
               version: ["3.8", "3.9", "3.10"]
       - lint
+      - code coverage
       - unused code check
