--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+rfc3987 = { version = "^1.3.8", optional = true }
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
@@ -16,6 +18,10 @@ jsonschema = "^4.17.3"
 vulture = "^2.6"
 flake8 = { version = "^6.0.0", python = ">=3.8.1" }
 pytest-cov = "^4.0.0"
+
+
+[tool.poetry.extras]
+strings = ["rfc3987"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
