--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ workflows:
       - python:
           matrix:
             parameters:
-              version: ["3.8", "3.9", "3.10"]
+              version: ["3.8", "3.9", "3.10", "3.11"]
       - lint
       - code coverage over 90
       - unused code check
