Added more license and copyright annotations Added new workflow checking REUSE 3.0 compliance

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2023 Civic Hacker, LLC
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 [tool.poetry]
 name = "schemamodels"
 version = "0.6.1"
