--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Civic Hacker, LLC
+# SPDX-License-Identifier: GPL-3.0-or-later
 [pytest]
 addopts = -p no:warnings
 python_files = tests.py test_*.py *_tests.py
