--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Civic Hacker, LLC
+# SPDX-License-Identifier: GPL-3.0-or-later
 [flake8]
 per-file-ignores =
     schemamodels/exceptions.py:E701
