--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
+# SPDX-FileCopyrightText: 2023 Civic Hacker, LLC
+
+# SPDX-License-Identifier: CC0-1.0#
+
 __pycache__/
 *.pyc
 *.pyo
 *.swp
 dist/
+*.lock
+pyproject.toml
+tox.ini
+pytest.ini
+.coverage
+*.json
