--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "schemamodels"
 version = "0.6.1"
 description = "Dynamically create useful data classes from JSON schemas"
 authors = ["'Jurnell Cockhren' <jurnell@civichacker.com>"]
-license = "LGPL-3.0-or-later"
+license = "GPL-3.0-or-later"
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -16,6 +16,7 @@ jsonschema = "^4.17.3"
 vulture = "^2.6"
 flake8 = { version = "^6.0.0", python = ">=3.8.1" }
 pytest-cov = "^4.0.0"
+reuse = "^1.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
